# advent-of-code

./: .env  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.agent/rules/: aoc-retrieval.md
.agent/workflows/: aoc-create-doc.md  aoc-doc-intro.md  aoc-help.md  aoc-megathread-post.md
.gemini/commands/: aoc.toml
.gemini/commands/aoc/: doc-intro.toml  doc.toml  help.toml  plan.toml  sample-input.toml
docs/: _config.yml  docker-compose.yml
docs/2016/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  index.md
docs/2018/: 1.md  2.md  3.md  4.md  5.md  6.md  index.md
docs/2022/: 10.md  12.md  18.md  23.md  9.md
docs/2025/: 1.md  10.md  11.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  index.md
docs/_data/: navigation.yaml
docs/python/: classes.md  networkx.md  recursion.md  shortest_paths.md  visualisation.md  zip.md
scripts/: create_year.sh  upload_to_pypi.py
src/AoC_2015/d02_simple_box_geometry/: wrapping_paper.py
src/AoC_2015/d19_molecular_retrosynthesis_str_replacement/: reindeer_chemistry.py
src/AoC_2015/d20_elf_visits_counting_generators_factors_and_set_algebra/: elf_delivery.py
src/AoC_2015/d21_boss_fight_classes_namedtuples_combinations_comprehension_if/: boss_fight.py
src/AoC_2015/d22_wizards_factories_dataclass_generators/: spell_casting_old.py
src/AoC_2015/d23_computer/: computer.py
src/AoC_2015/d24_sleigh_balance_subset_sum/: sleigh_balance.py
src/AoC_2015/d25_instr_manual_2d_list_gen/: instr_manual_codes.py  instr_manual_codes_numpy.py
src/AoC_2016/d01_taxicab_geometry_unit_circle/: distance_to_bunny_hq.py
src/AoC_2017/: Dazbo's_Advent_of_Code_2017.ipynb
src/AoC_2017/input/: input.txt
src/AoC_2018/d01/: d01.py
src/AoC_2018/d02/: d02.py
src/AoC_2018/d03/: d03.py
src/AoC_2018/d04/: d04.py  desc.html  problem-intro-part-1.md
src/AoC_2018/d05/: d05.py  problem-intro-part-1.md  problem-intro-part-2.md
src/AoC_2018/d06/: d06.py  problem-intro-part-1.md  problem-intro-part-2.md
src/AoC_2018/d07/: d07.py
src/AoC_2018/d08/: d08.py
src/AoC_2018/d09/: d09.py
src/AoC_2018/d10/: d10.py
src/AoC_2018/d11/: d11.py
src/AoC_2018/d12/: d12.py
src/AoC_2018/d13/: d13.py
src/AoC_2018/d14/: d14.py
src/AoC_2018/d15/: d15.py
src/AoC_2018/d16/: d16.py
src/AoC_2018/d17/: d17.py
src/AoC_2018/d18/: d18.py
src/AoC_2018/d19/: d19.py
src/AoC_2018/d20/: d20.py
src/AoC_2018/d21/: d21.py
src/AoC_2018/d22/: d22.py
src/AoC_2018/d23/: d23.py
src/AoC_2018/d24/: d24.py
src/AoC_2018/d25/: d25.py
src/AoC_2022/d01_calorie_counting/: elf_calories.py
src/AoC_2024/: Dazbo's_Advent_of_Code_2024.ipynb
src/AoC_2025/: update_script.py
src/AoC_2025/d01/: d01-range.py  (+1 more)
src/aoc_common/: aoc_commons.py
src/template_folder/: Dazbo's_Advent_of_Code_Template.ipynb  template.py
src/tests/: test_aoc_commons.py
tmp/: animation.py
(+45 files in other folders)
